--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nodemon": "^1.10.2",
     "npm-run-all": "^3.1.0",
     "songbird": "^1.0.4",
-    "trycatch": "^1.5.21"
+    "trycatch": "^1.5.21",
+    "yargs": "^6.0.0"
   },
   "devDependencies": {
     "rimraf": "^2.5.4",
